# 441-DataTransformationMicroservices

./: .gitignore  CMakeLists.txt  Makefile  README.md  caesar.c  caesar.h  const.h  identity.c  identity.h  lower.c  lower.h  mainclient.cpp  mainserver.cpp  masterClient.cpp  masterServer.cpp  reverse.c  reverse.h  rubrick.txt  upper.c  upper.h  yours.c  yours.h
microServices/: caesar-UDPserver.c  identity-UDPserver.c  identity.c  leetspeak-UDPserver.c  lower-UDPserver.c  onetime-UDPserver.c  reverse-UDPserver.c  upper-UDPserver.c  upper.c
